can only create one neighbor service profile